--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,11 @@
 * {
     margin:0;
 }
+
+.hero {
+    background-image: url('../images/hero-image-1.jpg');
+    height: 80%;
+    padding-bottom: 300px;
+    background-size: cover ;
+    background-color:;
+}
