--- a/style/style.css
+++ b/style/style.css
@@ -7,7 +7,7 @@
     padding-bottom: 300px;
     background-size: cover ;
     background-color:;
-    background-color: #4bc0ee;
+    background-color: black;
 }
 nav>ul>li {
     display: inline;
@@ -17,11 +17,11 @@ nav>ul>li {
 }
 nav>ul>li> a {
     text-decoration: none;
-    color:#4BC0EE;
+    color:black;
     font-size: 30px;
 }
 nav>ul>li> a:hover {
-    color: #0b2e82;
+    color: black;
     text-decoration: underline;
     transition: 0.2s;
 }
